--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -8,32 +8,62 @@
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <navbar class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a href="index.html" class="navbar-brand">
-                <img src="https://picsum.photos/35" alt="Portfolio Image" class="rounded-circle align-middle me-2">
-                <span class="fw-bold">Portfolio</span>
-            </a>
+<navbar class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a href="index.html" class="navbar-brand">
+            <img src="https://picsum.photos/35" alt="Portfolio Image" class="rounded-circle align-middle me-2">
+            <span class="fw-bold">Portfolio</span>
+        </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle Navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+                aria-controls="navbar" aria-expanded="false" aria-label="Toggle Navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse" id="navbar">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item active" aria-current="page">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item" aria-current="page">
-                        <a href="#" class="nav-link">Projects</a>
-                    </li>
-                    <li class="nav-item" aria-current="page">
-                        <a href="#" class="nav-link">Contact</a>
-                    </li>
-                </ul>
-            </div>
+        <div class="collapse navbar-collapse" id="navbar">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item active" aria-current="page">
+                    <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item" aria-current="page">
+                    <a href="#" class="nav-link">Projects</a>
+                </li>
+                <li class="nav-item" aria-current="page">
+                    <a href="#" class="nav-link">Contact</a>
+                </li>
+            </ul>
         </div>
-    </navbar>
+    </div>
+</navbar>
+
+<div class="container mt-4">
+    <h2 class="display-4 mb-4">Yanik Kumar
+        <small class="d-block text-muted">Project Engineer</small>
+    </h2>
+    <div class="row mb-4">
+        <div class="col-12 col-lg-6 mb-4 mb-lg-0">
+            <img src="https://picsum.photos/690/400" alt="Profile Pic" class="img-fluid rounded">
+        </div>
+        <div class="col-12 col-lg-6">
+            <h3>About</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A adipisci aperiam consequatur consequuntur
+                culpa cupiditate dolorum, eaque fugit itaque iusto laboriosam, minus molestiae nam provident quae quis
+                unde velit! Tenetur.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam debitis dolore dolores eaque id
+                maiores neque placeat quas reiciendis similique, sit sunt totam unde? Libero numquam, porro? Asperiores,
+                harum officia.
+            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi dicta eos facere, maiores molestias odit,
+                perspiciatis placeat possimus quo recusandae veritatis voluptatem. Corporis dolorum eius error fugit,
+                libero necessitatibus quos.
+                <br>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis culpa dignissimos eaque, et eveniet
+                ex facere fuga laboriosam nam non nostrum obcaecati odio perferendis porro quibusdam ratione rerum ullam
+                vero.
+            </p>
+        </div>
+    </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
