featured projects section added

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -63,6 +63,43 @@
             </p>
         </div>
     </div>
+
+     <h3>Featured Projects</h3>
+    <div class="row mb-4">
+        <div class="col-12 col-md-6 col-xl-3 mb-4">
+            <a href="portfolio.html">
+                <figure class="figure">
+                    <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail" src="https://picsum.photos/500/400">
+                    <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
+                </figure>
+            </a>
+        </div>
+
+        <div class="col-12 col-md-6 col-xl-3 mb-4">
+            <a href="portfolio.html">
+                <figure class="figure">
+                    <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail" src="https://picsum.photos/500/400">
+                    <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
+                </figure>
+            </a>
+        </div>
+        <div class="col-12 col-md-6 col-xl-3 mb-4">
+            <a href="portfolio.html">
+                <figure class="figure">
+                    <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail" src="https://picsum.photos/500/400">
+                    <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
+                </figure>
+            </a>
+        </div>
+        <div class="col-12 col-md-6 col-xl-3 mb-4">
+            <a href="portfolio.html">
+                <figure class="figure">
+                    <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail" src="https://picsum.photos/500/400">
+                    <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
+                </figure>
+            </a>
+        </div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
