figure-img class added

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -94,7 +94,7 @@
         <div class="col-12 col-md-6 col-xl-3 mb-4">
             <a href="portfolio.html">
                 <figure class="figure">
-                    <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail" src="https://picsum.photos/500/400">
+                    <img alt="Portfolio Item Heading" class="figure-img img-fluid img-thumbnail" src="https://picsum.photos/500/400">
                     <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
                 </figure>
             </a>
