--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -64,12 +64,13 @@
         </div>
     </div>
 
-     <h3>Featured Projects</h3>
+    <h3>Featured Projects</h3>
     <div class="row mb-4">
         <div class="col-12 col-md-6 col-xl-3 mb-4">
             <a href="portfolio.html">
                 <figure class="figure">
-                    <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail" src="https://picsum.photos/500/400">
+                    <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail"
+                         src="https://picsum.photos/500/400">
                     <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
                 </figure>
             </a>
@@ -78,7 +79,8 @@
         <div class="col-12 col-md-6 col-xl-3 mb-4">
             <a href="portfolio.html">
                 <figure class="figure">
-                    <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail" src="https://picsum.photos/500/400">
+                    <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail"
+                         src="https://picsum.photos/500/400">
                     <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
                 </figure>
             </a>
@@ -86,7 +88,8 @@
         <div class="col-12 col-md-6 col-xl-3 mb-4">
             <a href="portfolio.html">
                 <figure class="figure">
-                    <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail" src="https://picsum.photos/500/400">
+                    <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail"
+                         src="https://picsum.photos/500/400">
                     <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
                 </figure>
             </a>
@@ -94,12 +97,50 @@
         <div class="col-12 col-md-6 col-xl-3 mb-4">
             <a href="portfolio.html">
                 <figure class="figure">
-                    <img alt="Portfolio Item Heading" class="figure-img img-fluid img-thumbnail" src="https://picsum.photos/500/400">
+                    <img alt="Portfolio Item Heading" class="figure-img img-fluid img-thumbnail"
+                         src="https://picsum.photos/500/400">
                     <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
                 </figure>
             </a>
         </div>
     </div>
+
+    <div>
+        <h3>Testimonials</h3>
+        <div class="row mb-4">
+            <div class="col-12 col-lg-4">
+                <figure>
+                    <blockquote>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid autem beatae corporis ipsam
+                            minima nobis officia possimus quod reprehenderit. Architecto autem distinctio expedita
+                            impedit inventore magni maxime quod sequi voluptates?</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">Yanik Kumar</figcaption>
+                </figure>
+            </div>
+            <div class="col-12 col-lg-4">
+                <figure>
+                    <blockquote>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid autem beatae corporis ipsam
+                            minima nobis officia possimus quod reprehenderit. Architecto autem distinctio expedita
+                            impedit inventore magni maxime quod sequi voluptates?</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">Yanik Kumar</figcaption>
+                </figure>
+            </div>
+            <div class="col-12 col-lg-4">
+                <figure>
+                    <blockquote>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid autem beatae corporis ipsam
+                            minima nobis officia possimus quod reprehenderit. Architecto autem distinctio expedita
+                            impedit inventore magni maxime quod sequi voluptates?</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">Yanik Kumar</figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
