--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -70,7 +70,7 @@
             <a href="portfolio.html">
                 <figure class="figure">
                     <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail"
-                         src="https://picsum.photos/500/400">
+                         src="https://picsum.photos/id/34/500/400">
                     <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
                 </figure>
             </a>
@@ -80,7 +80,7 @@
             <a href="portfolio.html">
                 <figure class="figure">
                     <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail"
-                         src="https://picsum.photos/500/400">
+                         src="https://picsum.photos/id/321/500/400">
                     <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
                 </figure>
             </a>
@@ -89,7 +89,7 @@
             <a href="portfolio.html">
                 <figure class="figure">
                     <img alt="Portfolio Item Heading" class="img img-fluid img-thumbnail"
-                         src="https://picsum.photos/500/400">
+                         src="https://picsum.photos/id/52/500/400">
                     <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
                 </figure>
             </a>
@@ -98,7 +98,7 @@
             <a href="portfolio.html">
                 <figure class="figure">
                     <img alt="Portfolio Item Heading" class="figure-img img-fluid img-thumbnail"
-                         src="https://picsum.photos/500/400">
+                         src="https://picsum.photos/id/12/500/400">
                     <figcaption class="figure-caption">Portfolio Item Heading</figcaption>
                 </figure>
             </a>
@@ -141,6 +141,30 @@
         </div>
     </div>
 
+    <div>
+        <h3>Contact Me</h3>
+        <form action="" class="mb-4">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" id="email" class="form-control" placeholder="example@website.com">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Message</label>
+                        <textarea rows="4" id="message" cols="30" class="form-control" placeholder="Enter your message"></textarea>
+                    </div>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Send Message</button>
+        </form>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
