--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -6,6 +6,7 @@
     <title>Bootstrap version 5 portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/5d93eb1089.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <navbar class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -158,7 +159,8 @@
                 <div class="col-12 col-md-6">
                     <div class="mb-3">
                         <label for="message" class="form-label">Message</label>
-                        <textarea rows="4" id="message" cols="30" class="form-control" placeholder="Enter your message"></textarea>
+                        <textarea rows="4" id="message" cols="30" class="form-control"
+                                  placeholder="Enter your message"></textarea>
                     </div>
                 </div>
             </div>
@@ -166,6 +168,68 @@
         </form>
     </div>
 </div>
+
+<footer class="bg-light py-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-md-6 col-xl-3">
+                <div class="d-flex align-items-center mb-2">
+                    <div class="fa-layers fa-fw fa-2x me-1">
+                        <i class="fas fa-circle text-muted"></i>
+                        <i class="fas fa-code text-white" data-fa-transform="shrink-10"></i>
+                    </div>
+                    <h5 class="m-0">Code</h5>
+                </div>
+                <ul class="list-unstyled">
+                    <li><i class="fab fa-fw fa-github text-muted"></i> <a href="#">Github</a></li>
+                    <li><i class="fab fa-fw fa-codepen text-muted"></i> <a href="#">Codepen</a></li>
+                    <li><i class="fab fa-fw fa-stack-overflow text-muted"></i> <a href="#">Stackoverflow</a></li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3">
+                <div class="d-flex align-items-center mb-2">
+                    <div class="fa-layers fa-fw me-1 fa-2x">
+                        <i class="fas fa-circle text-muted"></i>
+                        <i class="fas fa-paint-brush text-white" data-fa-transform="shrink-10"></i>
+                    </div>
+                    <h5 class="m-0">Design</h5>
+                </div>
+                <ul class="list-unstyled">
+                    <li><i class="fab fa-fw fa-behance text-muted"></i> <a href="#">Behance</a></li>
+                    <li><i class="fab fa-fw fa-dribbble text-muted"></i> <a href="#">Dribbble</a></li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3">
+                <div class="d-flex align-items-center mb-2">
+                    <div class="fa-layers fa-fw me-1 fa-2x">
+                        <i class="fas fa-circle text-muted"></i>
+                        <i class="fas fa-images text-white" data-fa-transform="shrink-10"></i>
+                    </div>
+                    <h5 class="m-0">Photography</h5>
+                </div>
+                <ul class="list-unstyled">
+                    <li><i class="fab fa-fw fa-flickr text-muted"></i> <a href="#">Flickr</a></li>
+                    <li><i class="fab fa-fw fa-instagram text-muted"></i> <a href="#">Instagram</a></li>
+                </ul>
+            </div>
+            <div class="col-12 col-md-6 col-xl-3">
+                <div class="d-flex align-items-center mb-2">
+                    <div class="fa-layers fa-fw me-1 fa-2x">
+                        <i class="fas fa-circle text-muted"></i>
+                        <i class="fas fa-video text-white" data-fa-transform="shrink-10"></i>
+                    </div>
+                    <h5 class="m-0">Video</h5>
+                </div>
+                <ul class="list-unstyled">
+                    <li><i class="fab fa-fw fa-youtube text-muted"></i> <a href="#">YouTube</a></li>
+                    <li><i class="fab fa-fw fa-vimeo text-muted"></i> <a href="#">Vimeo</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <p class="text-center mb-0">&copy; 2024 Yanik Kumar. All rights reserved. </p>
+    </div>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
