overview page created

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/5d93eb1089.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<navbar class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a href="index.html" class="navbar-brand">
             <img src="https://picsum.photos/35" alt="Portfolio Image" class="rounded-circle align-middle me-2">
@@ -27,7 +27,7 @@
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item" aria-current="page">
-                    <a href="#" class="nav-link">Projects</a>
+                    <a href="overview.html" class="nav-link">Projects</a>
                 </li>
                 <li class="nav-item" aria-current="page">
                     <a href="#" class="nav-link">Contact</a>
@@ -35,7 +35,7 @@
             </ul>
         </div>
     </div>
-</navbar>
+</nav>
 
 <div class="container mt-4">
     <h2 class="display-4 mb-4">Yanik Kumar
